--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       <h1 class="logo">FASCO</h1>
       <nav class="nav-links">
         <a href="index.html">Home</a>
+        <a href="cart.html">Cart</a>
+        <a href="confirm.html">Confirm</a>
+        <a href="forgot.html">Forgot</a>
         <a href="shop.html">Shop</a>
         <a href="product.html">Product</a>
         <a href="#">Chanel</a>
