--- a/shop.html
+++ b/shop.html
@@ -9,14 +9,17 @@
 <body>
   <header class="navbar">
   <h1 class="logo">FASCO</h1>
-  <nav class="nav-links">
-    <a href="index.html">Home</a>
-    <a href="product.html">Product</a>
-    <a href="#">Chanel</a>
-    <a href="#">Prada</a>
-    <a href="#">Casuals</a>
-    <a href="#">Denim</a>
-  </nav>
+      <nav class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="cart.html">Cart</a>
+        <a href="confirm.html">Confirm</a>
+        <a href="forgot.html">Forgot</a>
+        <a href="product.html">Product</a>
+        <a href="#">Chanel</a>
+        <a href="#">Prada</a>
+        <a href="#">Casuals</a>
+        <a href="#">Denim</a>
+      </nav>
 </header>
 
 
