--- a/cart.html
+++ b/cart.html
@@ -10,9 +10,12 @@
     <h1 class="logo">FASCO</h1>
     <nav class="nav-links">
         <a href="index.html">Home</a>
+        <a href="checkout.html">Check Out</a>
         <a href="confirm.html">Confirm</a>
         <a href="forgot.html">Forgot</a>
         <a href="shop.html">Shop</a>
+        <a href="signin.html">Sign In</a>
+        <a href="signup.html">Sign Up</a>
         <a href="product.html">Product</a>
         <a href="#">Chanel</a>
         <a href="#">Prada</a>
