--- a/newpassword.html
+++ b/newpassword.html
@@ -7,6 +7,25 @@
   <script src="script.js" defer></script>
 </head>
 <body class="auth-page">
+    <header class="navbar">
+      <h1 class="logo">FASCO</h1>
+      <nav class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="cart.html">Cart</a>
+        <a href="checkout.html">Check Out</a>
+        <a href="confirm.html">Confirm</a>
+        <a href="forgot.html">Forgot</a>
+        <a href="shop.html">Shop</a>
+        <a href="signin.html">Sign In</a>
+        <a href="signup.html">Sign Up</a>
+        <a href="product.html">Product</a>
+        <a href="#">Chanel</a>
+        <a href="#">Prada</a>
+        <a href="#">Casuals</a>
+        <a href="#">Denim</a>
+      </nav>
+    </header>
+
   <div class="auth-container">
     <img src="images/signin.jpg" alt="Model" class="side-image" />
     <div class="auth-form">
