--- a/cart.html
+++ b/cart.html
@@ -6,23 +6,24 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <header class="navbar">
-    <h1 class="logo">FASCO</h1>
-    <nav class="nav-links">
+    <header class="navbar">
+      <h1 class="logo">FASCO</h1>
+      <nav class="nav-links">
         <a href="index.html">Home</a>
-        <a href="checkout.html">Check Out</a>
+        <a href="checkout.html">CheckOut</a>
         <a href="confirm.html">Confirm</a>
         <a href="forgot.html">Forgot</a>
+        <a href="newpassword.html">NewPassword</a>
         <a href="shop.html">Shop</a>
-        <a href="signin.html">Sign In</a>
-        <a href="signup.html">Sign Up</a>
+        <a href="signin.html">SignIn</a>
+        <a href="signup.html">SignUp</a>
         <a href="product.html">Product</a>
         <a href="#">Chanel</a>
         <a href="#">Prada</a>
         <a href="#">Casuals</a>
         <a href="#">Denim</a>
-    </nav>
-  </header>
+      </nav>
+    </header>
 
   <main class="cart-container">
     <h2>Shopping Cart</h2>
