--- a/checkout.html
+++ b/checkout.html
@@ -13,9 +13,10 @@
         <a href="cart.html">Cart</a>
         <a href="confirm.html">Confirm</a>
         <a href="forgot.html">Forgot</a>
+        <a href="newpassword.html">NewPassword</a>
         <a href="shop.html">Shop</a>
-        <a href="signin.html">Sign In</a>
-        <a href="signup.html">Sign Up</a>
+        <a href="signin.html">SignIn</a>
+        <a href="signup.html">SignUp</a>
         <a href="product.html">Product</a>
         <a href="#">Chanel</a>
         <a href="#">Prada</a>
