--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
       <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="cart.html">Cart</a>
-        <a href="checkout.html">Check Out</a>
+        <a href="checkout.html">CheckOut</a>
         <a href="confirm.html">Confirm</a>
         <a href="forgot.html">Forgot</a>
+        <a href="newpassword.html">NewPassword</a>
         <a href="shop.html">Shop</a>
-        <a href="signin.html">Sign In</a>
-        <a href="signup.html">Sign Up</a>
+        <a href="signin.html">SignIn</a>
+        <a href="signup.html">SignUp</a>
         <a href="product.html">Product</a>
         <a href="#">Chanel</a>
         <a href="#">Prada</a>
