--- a/signup.html
+++ b/signup.html
@@ -7,16 +7,17 @@
   <script src="script.js" defer></script>
 </head>
 <body class="auth-page">
-        <header class="navbar">
+    <header class="navbar">
       <h1 class="logo">FASCO</h1>
       <nav class="nav-links">
         <a href="index.html">Home</a>
-        <a href="checkout.html">Check Out</a>
         <a href="cart.html">Cart</a>
+        <a href="checkout.html">CheckOut</a>
         <a href="confirm.html">Confirm</a>
         <a href="forgot.html">Forgot</a>
+        <a href="newpassword.html">NewPassword</a>
         <a href="shop.html">Shop</a>
-        <a href="signin.html">Sign In</a>
+        <a href="signin.html">SignIn</a>
         <a href="product.html">Product</a>
         <a href="#">Chanel</a>
         <a href="#">Prada</a>
