--- a/checkout.html
+++ b/checkout.html
@@ -25,7 +25,7 @@
       </nav>
     </header>
   <main class="checkout-container">
-    <h2>FASCO Demo Checkout</h2>
+    <h2>FASCO Checkout</h2>
     <div class="checkout-flex">
       <form class="checkout-form">
         <fieldset>
@@ -48,7 +48,7 @@
       </form>
 
       <div class="checkout-summary">
-        <img src="images/Red 6.jpeg" alt="Red Dress">
+        <img src="images/Red6.jpeg" alt="Red Dress">
         <p>Red Dress</p>
         <p>#29,000</p>
       </div>
